--- a/AIUI/show.html
+++ b/AIUI/show.html
@@ -120,43 +120,127 @@
         <!-- Main content -->
         <section class="content">
 
-            <div class="col-12">
-                <div class="box">
-                    <div class="box-header with-border">
-                        <h3 class="box-title">搭配红黑榜<span class="text-danger">*</span></h3>
-                    </div>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-6 bg-danger" >
-                                <h3 class="text-center">红榜</h3>
-                                <div class="d-flex flex-row mb-3">
-                                    <div class="p-1">
-                                        <img src="./UML 图.jpg" alt="top" class="img-thumbnail">
+            <!--图片展示-->
+            <div class="vtabs">
+                <ul class="nav nav-tabs tabs-vertical" role="tablist">
+                    <li class="nav-item"> 
+                        <a class="nav-link active show" data-toggle="tab" href="#RED" role="tab" aria-selected="true">
+                            <span class="hidden-sm-up">
+                                <i class="ion-home">
+                                </i>
+                            </span> 
+                            <span class="hidden-xs-down">
+                                红榜
+                            </span> 
+                        </a> 
+                    </li>
+                    <li class="nav-item"> 
+                        <a class="nav-link show" data-toggle="tab" href="#BLACK" role="tab" aria-selected="false">
+                            <span class="hidden-sm-up">
+                                <i class="ion-person">                                    
+                                </i>
+                            </span> 
+                            <span class="hidden-xs-down">
+                                黑榜
+                            </span>
+                        </a> 
+                    </li>
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane active" id="RED">
+                        <div class="row " style="height: 500px;">
+                            <div class="col-md pre-scrollable" style="height: 100%;">
+                                <div class="container">
+                                <!--这里十个页面可以用js实现比较好，所以只放了两个示意一下-->
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <img id="photo1" src="images/1.jpg" alt="top" class="img-thumbnail" style="height: 100%;">
+                                        </div>
+                                        <div class="col-md-4">
+                                            <img id="photo2" src="images/1.jpg" alt="bottom" class="img-thumbnail" style="height: 100%;">
+                                        </div>
+                                        <div class="col-md-4">
+                                            <h1 style="text-align: center;">推荐指数</h1>
+                                            <button class="btn btn-info btn-block" id="Sure">认定</button>
+                                            <button class="btn btn-info btn-block" id="Modify">修改分数</button>
+                                        </div>
                                     </div>
-                                    <div class="p-1">
-                                        <img src="./UML 图.jpg" alt="bottom" class="img-thumbnail">
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <img id="photo1" src="images/1.jpg" alt="top" class="img-thumbnail" style="height: 100%;">
+                                        </div>
+                                        <div class="col-md-4">
+                                            <img id="photo2" src="images/1.jpg" alt="bottom" class="img-thumbnail" style="height: 100%;">
+                                        </div>
+                                        <div class="col-md-4">
+                                            <h1 style="text-align: center;">推荐指数</h1>
+                                            <button class="btn btn-info btn-block" id="Sure">认定</button>
+                                            <button class="btn btn-info btn-block" id="Modify">修改分数</button>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="caption">
-                                    <h3 class="text-center">评级：</h3>
-                                </div>
-                            </div>
-                            <div class="col-md-6  bg-dark" >
-                                <h3 class="text-center">黑榜</h3>
-                                <div class="d-flex flex-row mb-3">
-                                    <div class="p-1">
-                                        <img src="./UML 图.jpg" alt="top" class="img-thumbnail">
-                                    </div>
-                                    <div class="p-1">
-                                        <img src="./UML 图.jpg" alt="bottom" class="img-thumbnail">
-                                    </div>
-                                </div>
-                                <div class="caption">
-                                    <h3 class="text-center">评级：</h3>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <div class="tab-pane" id="BLACK">
+                        <div class="row" style="height: 500px;">
+                            <div class="col-md pre-scrollable" style="height: 100%;">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <img id="photo1" src="images/1.jpg" alt="top" class="img-thumbnail" style="height: 100%;">
+                                        </div>
+                                        <div class="col-md-4">
+                                            <img src="images/1.jpg" alt="bottom" class="img-thumbnail" style="height: 100%;">
+                                        </div>
+                                        <div class="col-md-4">
+                                            <h1 style="text-align: center;">推荐指数</h1>
+                                            <button class="btn btn-info btn-block" id="Sure">认定</button>
+                                            <button class="btn btn-info btn-block" id="Modify">修改分数</button>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <img id="photo1" src="images/1.jpg" alt="top" class="img-thumbnail" style="height: 100%;">
+                                        </div>
+                                        <div class="col-md-4">
+                                            <img src="images/1.jpg" alt="top" class="img-thumbnail" style="height: 100%;">
+                                        </div>
+                                        <div class="col-md-4">
+                                            <h1 style="text-align: center;">推荐指数</h1>
+                                            <button class="btn btn-info btn-block" id="Sure">认定</button>
+                                            <button class="btn btn-info btn-block" id="Modify">修改分数</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!--分页-->
+            <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-center">
+                  <li class="page-item disabled">
+                    <a class="page-link" href="#" tabindex="-1">Previous</a>
+                  </li>
+                  <li class="page-item"><a class="page-link" href="#">1</a></li>
+                  <li class="page-item"><a class="page-link" href="#">2</a></li>
+                  <li class="page-item"><a class="page-link" href="#">3</a></li>
+                  <li class="page-item"><a class="page-link" href="#">4</a></li>
+                  <li class="page-item"><a class="page-link" href="#">5</a></li>
+                  <li class="page-item"><a class="page-link" href="#">6</a></li>
+                  <li class="page-item"><a class="page-link" href="#">7</a></li>
+                  <li class="page-item"><a class="page-link" href="#">8</a></li>
+                  <li class="page-item"><a class="page-link" href="#">9</a></li>
+                  <li class="page-item"><a class="page-link" href="#">10</a></li>
+                  <li class="page-item">
+                    <a class="page-link" href="#">Next</a>
+                  </li>
+                </ul>
+              </nav>
+
 
         </section>
         <!-- /.content -->
@@ -201,7 +285,7 @@
 <script src="main/js/jquery-cookies.js"></script>
 <script src="main/js/login.js"></script>
 <script src="main/js/items.js"></script>
-<script src="main/js/upload.js"></script>
+<script src="main/js/show.js"></script>
 
 
 </body>
